# test-nanohire

./: .env.example  docker-compose.dev.yml  docker-compose.yml  specification.md
api/: .env.example  Dockerfile  entrypoint.sh  main.py  models.py  pyproject.toml
api/api/v1/: __init__.py  router.py
api/api/v1/auth/: controller.py  router.py  schemas.py
api/api/v1/notification/: __init__.py  controller.py  router.py  schemas.py
api/api/v1/vacancy/: __init__.py  router.py
api/api/v1/vacancy/response/: router.py
api/core/: config.py  logger.py  securiry.py
api/migration/: env.py
api/migration/versions/: 5672bb533e3e_add_manager_id_to_vacancy_model.py  65764348e598_initial_revision.py  79d9bbe87d02_add_hh_manager_id_to_user_model.py  e93e7a2b5286_initial_revision.py
api/rpc/: __init__.py  methods.py  rpc.py  schemas.py
api/utils/: dependencies.py
integration-hh/: .dockerignore  Dockerfile  entrypoint.sh  main.py  models.py  pyproject.toml
integration-hh/adapters/: __init__.py
integration-hh/adapters/hh/: __init__.py  hh_adapter.py  schemas.py
integration-hh/api/: __init__.py
integration-hh/api/v1/: __init__.py
integration-hh/api/v1/mock/: __init__.py  router.py
integration-hh/api/v1/mock/hh/: __init__.py  controller.py  router.py
integration-hh/core/: config.py
integration-hh/exceptions/: base.py  external.py  internal.py
integration-hh/migration/versions/: f0e2be40dcfa_initial_revision.py
integration-hh/utils/: dependencies.py
integration-hh/webhook/: __init__.py  router.py
integration-hh/webhook/hh/: controller.py  router.py  schemas.py
notifications/: Dockerfile  api_client.py  config.py  exceptions.py  main.py  notification_service.py  pyproject.toml  scheduler.py
scripts/: init-db.sh
