[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.1",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "gunicorn>=25.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.47",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
