[project]
name = "notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler>=3.11.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.2",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
